fix(ui): hide mouse cursor in player app v20.3.2

--- a/player-windows/src/index.css
+++ b/player-windows/src/index.css
@@ -27,6 +27,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: none !important;
+  /* Esconder cursor mouse */
 }
 
 /* Base Layout */
